--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Tatiana Bladier"
-  avatar           : "profile.png"
-  bio              : "PhD student in computational linguistics"
+  avatar           : "TaniaBladier.jpg"
+  bio              : "PhD student in computational linguistics from Düsseldorf, Germany"
   location         : "Marseille, France"
   employer         :
   pubmed           : 
