--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Tatiana Bladier"
   avatar           : "TaniaBladier.jpg"
-  bio              : "PhD student in computational linguistics from Düsseldorf, Germany"
+  bio              : "PhD student in computational linguistics from Düsseldorf (Germany) and Marseille (France)"
   location         : "Marseille, France"
   employer         :
   pubmed           : 
