--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=Yntm-YQAAAAJ&hl=en"
-  email            : "tania.bladier@yahoo.de"
+  email            : "bladier.tatiana@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Tatiana-Bladier"
   uri              :
   bitbucket        :
