--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 Name Name:
   name        : "Tatiana Bladier"
   uri         : "https://taniabladier.github.op"
-  email       : "tania.bladier@yahoo.de"
+  email       : "bladier.tatiana@gmail.com"
   bio         : "Computational linguist"
   avatar      : "TaniaBladier.jpg"
 #  twitter     : "name"
