--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,10 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
-theme: minimal-mistakes-jekyll
-minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-
+# Build settings
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+minimal_mistakes_skin: "mauro" # "air"contrast", "aqua", "dirt", "sunrise", "dark", "default", "neon", "plum", "mint"
+search: true
 
 # SEO Related
 google_site_verification :
