--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ atom_feed:
 
 # Build settings
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-minimal_mistakes_skin: "mauro" # "air"contrast", "aqua", "dirt", "sunrise", "dark", "default", "neon", "plum", "mint"
+minimal_mistakes_skin: "dark" # "air"contrast", "aqua", "dirt", "sunrise", "dark", "default", "neon", "plum", "mint"
 search: true
 
 # SEO Related
