--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Tatiana Bladier / Computational Linguist"
+title                    : "Dr. Tatiana Bladier / Computational Linguist"
 title_separator          : "-"
 name                     : &name "Tatiana Bladier"
 description              : &description ""
@@ -87,7 +87,7 @@ analytics:
 author:
   name             : "Tatiana Bladier"
   avatar           : "TaniaBladier.jpg"
-  bio              : "PhD student in computational linguistics from Düsseldorf (Germany) and Marseille (France)"
+  bio              : "Postdoctoral computational linguist at [Laboratoire d'Informatique et des Systèmes](https://www.lis-lab.fr/) in Marseille, France"
   location         : "Marseille, France"
   employer         :
   pubmed           : 
