--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ analytics:
 author:
   name             : "Tatiana Bladier"
   avatar           : "TaniaBladier.jpg"
-  bio              : "Postdoctoral computational linguist at [Laboratoire d'Informatique et des Systèmes](https://www.lis-lab.fr/) in Marseille, France"
+  bio              : "Postdoctoral computational linguist at the Aix-Marseille University in France"
   location         : "Marseille, France"
   employer         :
   pubmed           : 
