--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Dr. Tatiana Bladier / Computational Linguist"
 title_separator          : "-"
-name                     : &name "Tatiana Bladier"
+name                     : &name "Dr. Tatiana Bladier"
 description              : &description ""
 url                      : https://tatianabladier.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -17,7 +17,7 @@ repository               : "tatianabladier.github.io" #academicpages
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
-future                   : true
+future                   : false
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
