--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Tatiana Bladier"
+  name             : "Dr. Tatiana Bladier"
   avatar           : "TaniaBladier.jpg"
   bio              : "Postdoctoral computational linguist at the Aix-Marseille University in France"
   location         : "Marseille, France"
