--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   uri              :
   bitbucket        :
   codepen          :
-  dribbble
+  dribbble         :
   dblp             : "https://dblp.org/pid/219/5669.html"
   flickr           :
   facebook         :
